Change cursor on subscribe button to a pointer, fix uneven height on newsletter form

--- a/source/assets/stylesheets/styles/_footer_newsletter.scss
+++ b/source/assets/stylesheets/styles/_footer_newsletter.scss
@@ -20,9 +20,8 @@
   font-family: inherit;
   font-size: 1em;
   font-weight: 200;
-  height: 35px;
+  height: 40px;
   margin-bottom: 8px;
-
   width: 100%;
 
   @include breakpoint($tablet-breakpoint) {
@@ -34,6 +33,7 @@
     background-color: $footer__newsletter-button-color;
     border: groove 1px;
     color: $footer__newsletter-text-color;
+    cursor: pointer;
     font-family: inherit;
     font-size: 1em;
     font-weight: 200;
